--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -89,13 +89,16 @@
                 <div class="col-md-3 " style="padding-left:50px">
                   <span> <strong>Product</strong> </span>
                 </div>
-                <div class="col-md-offset-3 col-md-3 text-center">
+                <div class="col-md-offset-2 col-md-3 text-center">
                   <strong style="padding-left:50px">Price</strong>
                 </div>
-                <div class=" col-md-1">
+                <div class="col-md-1">
                   <strong>Qty</strong>
                 </div>
-                <div class="col-md-2" style="padding-left:50px">
+                <div ng-if="!isStoreGlobal" class="col-md-1">
+                  <strong>GST</strong>
+                </div>
+                <div class="{{isStoreGlobal==true?'col-md-2':'col-md-2'}}" style="padding-left:40px">
                   <strong>Total</strong>
                 </div>
               </div>
@@ -137,7 +140,7 @@
                     <img style="width: 70%;" class="img" ng-src="{{c.product.files[0].attachment}}" ng-if="c.product.files.length>0">
                     <img style="width: 70%;" class="img" src="/static/images/ecommerce.jpg" ng-if="c.product.files==null">
                   </div>
-                  <div class="col-md-3" style="height:100px;padding-top: 50px;">
+                  <div class="col-md-2" style="height:100px;padding-top: 50px;">
                     <!-- <h5 ng-if="c.product.product.name.length>30" style="margin:0px;  height:50px;">{{c.product.product.name.slice(0,30)}}...</h5>
                     <h5 ng-if="c.product.product.name.length<=30" style="margin:0px;  height:50px;">{{c.product.product.name}}</h5> -->
                     <h5 ng-if="c.prod_var==undefined" style="margin:0px; height:50px;"> {{c.product.product.name}}<span ng-if="c.product.product.howMuch!=null">  {{c.product.product.howMuch | convertUnit: c.product.product.unit}} </span> </h5>
@@ -175,9 +178,12 @@
                   </div>
                   <div class="col-md-1" style="padding-top: 50px;" ng-if="!c.stock">
                   </div>
-                  <div class="col-md-2" style="padding-top: 50px;padding-left:50px;">
-                    <p ng-if="c.prodSku==c.product.product.serialNo"> <i class="fa {{currency}}"></i> {{(c.product.product.discountedPrice * c.qty).toFixed(2) }} </p>
-                    <p ng-if="c.prodSku!=c.product.product.serialNo"> <i class="fa {{currency}}"></i> {{(c.prodVarPrice * c.qty).toFixed(2) }} </p>
+                  <div ng-if="!isStoreGlobal" class="col-md-1" style="padding-top: 50px;">
+                    <span><i class="fa {{currency}}"></i>{{((c.gst * c.product.product.discountedPrice  * c.qty)/100).toFixed(2)}}</span>
+                  </div>
+                  <div class="{{isStoreGlobal==true?'col-md-2':'col-md-2'}}" style="padding-top: 50px;padding-left:40px;">
+                    <p ng-if="c.prodSku==c.product.product.serialNo"> <i class="fa {{currency}}"></i> {{((c.product.product.discountedPrice * c.qty) + (c.gst * c.product.product.discountedPrice/100  * c.qty)).toFixed(2) }} </p>
+                    <p ng-if="c.prodSku!=c.product.product.serialNo"> <i class="fa {{currency}}"></i> {{((c.prodVarPrice * c.qty) + (c.gst * c.product.product.discountedPrice/100  * c.qty)).toFixed(2) }} </p>
                   </div>
                 </div>
               </div>
@@ -205,14 +211,14 @@
                   </div>
                 </div>
                 <div class="row" style="padding-top:20px;">
-                  <div class="col-xs-2">
+                  <div class="col-xs-4">
                     <span>Qty :</span>
                   </div>
-                  <div class="col-xs-3" >
+                  <div class="col-xs-4" >
                     <input type="number" ng-change="changeQty()" ng-model="item.qty" name="" value="" style="width: 40px;" min="1" >
                   </div>
 
-                  <div class="col-xs-3">
+                  <div class="col-xs-4">
                     <span>Total :</span>
                   </div>
                   <div class="col-xs-4">
@@ -223,7 +229,7 @@
 
 
               <div ng-if="cartItems" ng-repeat="c in cartItems">
-                <div class="col-xs-12 col-sm-6">
+                <div class="col-xs-12 col-sm-12">
 
                   <div class="row" style="padding-top:30px;">
                     <div class="col-xs-6" style="overflow:hidden;">
@@ -253,23 +259,46 @@
                   </div>
 
                   <div class="row" style="padding-top:20px;">
-                    <div class="col-xs-2" ng-if="c.stock>0">
-                      <span>Qty :</span>
+                    <div class="row">
+                      <div class="col-xs-3" ng-if="c.stock>0">
+                        <span>Qty :</span>
+                      </div>
+                      <div class="col-xs-2" ng-if="c.stock>0" style="padding:0px">
+                        <input type="number" ng-change="changeQty(c)" ng-model="c.qty" name="" value="" style="width: 40px;" min="1" >
+                      </div>
+
+                      <div ng-if="!isStoreGlobal" class="col-xs-3" >
+                        <span>GST :</span>
+                      </div>
+                      <div ng-if="!isStoreGlobal" class="col-xs-4" style="padding:0px" >
+                          <span><i class="fa {{currency}}"></i> {{(c.gst * c.product.product.discountedPrice/100 * c.qty).toFixed(2)}}</span>
+                      </div>
                     </div>
-                    <div class="col-xs-3" ng-if="c.stock>0">
-                      <input type="number" ng-change="changeQty(c)" ng-model="c.qty" name="" value="" style="width: 40px;" min="1" >
+
+
+
+                    <!-- <div ng-if="!isStoreGlobal" class="col-md-1" style="padding-top: 50px;">
+                      <span><i class="fa {{currency}}"></i>{{(c.gst * c.product.product.price )/100}}</span>
                     </div>
-                    <div class="col-xs-5" ng-if="c.stock<=0||!c.stock">
-                      <span style="color:#ef4a1e">Out Of Stock</span>
-                      <button class="btn btn-primary" ng-click="addWishList($index,c.pk)">Add to Wishlist <i class="fa fa-heart"></i></button>
+                    <div class="{{isStoreGlobal==true?'col-md-2':'col-md-1'}}" style="padding-top: 50px;padding-left:40px;">
+                      <p ng-if="c.prodSku==c.product.product.serialNo"> <i class="fa {{currency}}"></i> {{((c.product.product.discountedPrice * c.qty) + (c.gst * c.product.product.price/100)).toFixed(2) }} </p>
+                      <p ng-if="c.prodSku!=c.product.product.serialNo"> <i class="fa {{currency}}"></i> {{((c.prodVarPrice * c.qty) + (c.gst * c.product.product.price/100)).toFixed(2) }} </p>
+                    </div> -->
+
+                    <div class="row" style="padding-top:15px;">
+                      <div class="col-xs-12" ng-if="c.stock<=0||!c.stock">
+                        <span style="color:#ef4a1e">Out Of Stock</span>
+                        <button class="btn btn-primary" ng-click="addWishList($index,c.pk)">Add to Wishlist <i class="fa fa-heart"></i></button>
+                      </div>
+                      <div class="col-xs-4">
+                        <p>Total :</p>
+                      </div>
+                      <div class="col-xs-5">
+                        <p ng-if="c.prodSku==c.product.product.serialNo"> <i class="fa {{currency}}"></i> {{((c.product.product.discountedPrice * c.qty) +  (c.gst * c.product.product.discountedPrice/100 * c.qty)).toFixed(2)}} </p>
+                        <p ng-if="c.prodSku!=c.product.product.serialNo"> <i class="fa {{currency}}"></i> {{((c.prodVarPrice * c.qty) + (c.gst * c.product.product.discountedPrice/100  * c.qty)).toFixed(2) }}  </p>
+                      </div>
                     </div>
-                    <div class="col-xs-3">
-                      <span>Total :</span>
-                    </div>
-                    <div class="col-xs-4">
-                      <p ng-if="c.prodSku==c.product.product.serialNo"> <i class="fa {{currency}}"></i> {{(c.product.product.discountedPrice * c.qty).toFixed(2) }} </p>
-                      <p ng-if="c.prodSku!=c.product.product.serialNo"> <i class="fa {{currency}}"></i> {{(c.prodVarPrice * c.qty).toFixed(2) }}  </p>
-                    </div>
+
                   </div>
 
                 </div>
@@ -301,7 +330,7 @@
                 <span style="font-size:20px;">Total </span>
                 <br>
                 <i class="fa fa-2x {{currency}}"></i> <span ng-if="total!=totalAfterDiscount" style="font-size:20px; padding-right:10px; "> <strike> {{total.toFixed(2)}}  </strike> </span>
-                <span style="font-size:20px;"> {{totalAfterDiscount.toFixed(2)}} </span>
+                <span style="font-size:20px;"> {{totalAfterDiscount.toFixed(2)}} </span> <span class="text-muted" ng-if="!isStoreGlobal">(GST Included)</span>
               </div>
             </div>
             <div class="col-md-6" >
@@ -782,8 +811,8 @@
               </p>
               <p>
                 <strong>Total amount payable :</strong>
-                <span ng-if="msg=='Success'" > <i class="fa {{currency}}"></i> {{(totalAfterPromo + shippingCharges).toFixed(2)}}</span>
-              <span ng-if="msg!='Success'"><i class="fa {{currency}}"></i> {{(totalAfterDiscount + shippingCharges).toFixed(2)}}</span>
+                <span ng-if="msg=='Success'" > <i class="fa {{currency}}"></i> {{(totalAfterPromo + shippingCharges).toFixed(2)}} <span class="text-muted" ng-if="!isStoreGlobal">(GST Included)</span> </span>
+                <span ng-if="msg!='Success'"><i class="fa {{currency}}"></i> {{(totalAfterDiscount + shippingCharges).toFixed(2)}} <span class="text-muted" ng-if="!isStoreGlobal">(GST Included)</span> </span>
               </p>
             </div>
 
@@ -806,13 +835,13 @@
             <div class="row" style="padding-top:20px;">
               <span style="font-size:20px;">Order Summary<span >
             </div>
-            <div style="margin:0px; padding:0px 0px 0px 35px">
+            <div class="row" style="padding-top:5px;">
                <span style="font-size:15px;">  Shipping Details </span>: <span style="font-size:14px;">  {{username}} ,{{data.address.mobileNo}} {{data.address.landMark}} {{data.address.street}}, {{data.address.city}}, {{data.address.state}}, {{data.address.country}} - {{data.address.pincode}} </span>
             </div>
 
           </div>
           <div class="row" ng-if="getShippingCharges">
-            <div class="col-xs-12" style="margin-left:30px;">
+            <div class="col-xs-12" style="padding:0px">
               <div class="col-md-3 col-xs-12" ng-repeat="c in cartItems" style="margin-top:15px;">
                 <div class="card">
                   <img style="width: 100%; height:150px;" class="img" ng-src="{{c.product.files[0].attachment}}">
