--- a/support/static/ngTemplates/app.report.html
+++ b/support/static/ngTemplates/app.report.html
@@ -11,38 +11,48 @@
 
                 <div class="col-md-3">
                   <span style="font-size:12px"><strong>Project Title :
-                    </strong>{{m.project.title}} </span>
+                  </strong>{{m.productTittle}} </span>
                 </div>
+
                 <div class="col-md-3">
+                  <span style="font-size:12px"><strong>Comm_nr :
+                  </strong>{{m.projectComm}} </span>
+                </div>
+
+                <div class="col-md-3">
+                  <span style="font-size:12px"><strong>Total :
+                  </strong>{{(m.totalprice).toFixed(2)}} </span>
+                </div>
+                <!-- <div class="col-md-3">
                   <span style="font-size:12px"><strong> Enginner:
                     </strong> {{m.user.first_name}}</span>
-                </div>
+                </div> -->
 
 
-                <div class="col-md-2">
+                <!-- <div class="col-md-2">
                   <span style="font-size:12px"><strong> Total:
                     </strong>{{sum[$index].toFixed(2)}}</span>
-                </div>
+                </div> -->
 
                   <!-- <span><a  class="btn btn-primary "
 style="cursor:pointer;" target="_blank" href="">Material Issue<i
 class="fa fa-download"
 style="font-size:1em;cursor:pointer;margin-left:1em"></i></a></span> -->
 
-            <div class="col-md-2" >
+            <!-- <div class="col-md-2" >
                   <span><a class="btn btn-primary" style="cursor:pointer;" target="_blank" href="/api/support/materialIssued/?value={{m.pk}}">Material Isuue <i class="fa fa-download"  ng-click="$event.stopPropagation();"></i></a></span>
-                </div>
-                <div class="col-md-1">
+                </div> -->
+                <!-- <div class="col-md-1">
                   <button type="button" class="btn btn-danger btn-sm" ng-click="$event.stopPropagation();" mwl-confirm title="Delete" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="delete(m.pk,$index);"
                     confirm-button-type="default" cancel-button-type="default"> <i class="fa fa-trash"></i> </button>
-                  </div>
+                  </div> -->
               </div>
             </div>
             <div class="row container-fluid" ng-if="m.open">
               <div class="container-fluid">
                 <hr>
               </div>
-              <div class="col-md-4">
+              <!-- <div class="col-md-4">
                 <div class="row">
                   <div class="col-md-4">
                     <span style="font-size:14px"><strong> Comm nr:
@@ -90,7 +100,7 @@ style="font-size:1em;cursor:pointer;margin-left:1em"></i></a></span> -->
                 </table>
               </div>
 
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
