--- a/support/static/ngTemplates/app.projects.service.view.html
+++ b/support/static/ngTemplates/app.projects.service.view.html
@@ -268,7 +268,7 @@
             <span> {{(form.packing * form.exRate).toFixed(2)}}</span>
           </div>
           <div class="col-md-2 text-center">
-            <span> {{(form.packing / form.invoiceValue).toFixed(2)}} %</span>
+            <span> {{(form.packing*100 / form.invoiceValue).toFixed(2)}} %</span>
           </div>
         </div>
         <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -283,7 +283,7 @@
             <!-- <input type="number" class="form-control text-center" ng-model="form.insuranceINR"> -->
           </div>
           <div class="col-md-2 text-center">
-            <span> {{(form.insurance/ form.invoiceValue).toFixed(2)}}% </span>
+            <span> {{(form.insurance*100/ form.invoiceValue).toFixed(2)}}% </span>
             <!-- <input type="number" class="form-control text-center" ng-model="form.insurancePer"> -->
           </div>
         </div>
@@ -299,7 +299,7 @@
             <!-- <input type="number" class="form-control text-center" ng-model="form.freightINR"> -->
           </div>
           <div class="col-md-2 text-center">
-            <span> {{(form.freight/ form.invoiceValue).toFixed(2)}} %</span>
+            <span> {{(form.freight*100/ form.invoiceValue).toFixed(2)}} %</span>
             <!-- <input type="number" class="form-control text-center" ng-model="form.freightPer"> -->
           </div>
         </div>
@@ -365,7 +365,7 @@
           </div>
           <div class="col-md-2 text-center">
             <!-- <input type="number" class="form-control text-center" ng-model="form.clearingCharges1Per"> -->
-            <span> {{(form.clearingCharges1/(form.invoiceValue* form.exRate)).toFixed(2)}} %</span>
+            <span> {{(form.clearingCharges1*100/(form.invoiceValue* form.exRate)).toFixed(2)}} %</span>
           </div>
         </div>
         <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -380,7 +380,7 @@
           </div>
           <div class="col-md-2 text-center">
             <!-- <input type="number" class="form-control text-center" ng-model="form.clearingCharges2Per"> -->
-            <span> {{(form.clearingCharges2/(form.invoiceValue * form.exRate)).toFixed(2)}} %</span>
+            <span> {{(form.clearingCharges2*100/(form.invoiceValue * form.exRate)).toFixed(2)}} %</span>
           </div>
         </div>
         <!-- <div class="row" style="padding-top:10px">
@@ -740,7 +740,7 @@
           <span> {{(form.packing * form.exRate).toFixed(2)}}</span>
         </div>
         <div class="col-md-2 text-center">
-          <span> {{(form.packing  / form.invoiceValue).toFixed(2)}} %</span>
+          <span> {{(form.packing *100 / form.invoiceValue).toFixed(2)}} %</span>
         </div>
       </div>
       <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -754,7 +754,7 @@
           <span> {{(form.insurance * form.exRate).toFixed(2)}}</span>
         </div>
         <div class="col-md-2 text-center">
-          <span> {{(form.insurance/ form.invoiceValue).toFixed(2)}}% </span>
+          <span> {{(form.insurance*100/ form.invoiceValue).toFixed(2)}}% </span>
         </div>
       </div>
       <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -768,7 +768,7 @@
           <span> {{(form.freight * form.exRate).toFixed(2)}}</span>
         </div>
         <div class="col-md-2 text-center">
-          <span> {{(form.freight/ form.invoiceValue).toFixed(2)}} %</span>
+          <span> {{(form.freight*100/ form.invoiceValue).toFixed(2)}} %</span>
         </div>
       </div>
       <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -1153,7 +1153,7 @@
           <span> {{(form.packing * form.exRate).toFixed(2)}}</span>
         </div>
         <div class="col-md-2 text-center">
-          <span> {{(form.packing / form.invoiceValue).toFixed(2)}} %</span>
+          <span> {{(form.packing *100/ form.invoiceValue).toFixed(2)}} %</span>
         </div>
       </div>
       <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -1167,7 +1167,7 @@
           <span> {{(form.insurance * form.exRate).toFixed(2)}}</span>
         </div>
         <div class="col-md-2 text-center">
-          <span> {{(form.insurance/ form.invoiceValue).toFixed(2)}}% </span>
+          <span> {{(form.insurance*100/ form.invoiceValue).toFixed(2)}}% </span>
         </div>
       </div>
       <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -1181,7 +1181,7 @@
           <span> {{(form.freight * form.exRate).toFixed(2)}}</span>
         </div>
         <div class="col-md-2 text-center">
-          <span> {{(form.freight/ form.invoiceValue).toFixed(2)}} %</span>
+          <span> {{(form.freight*100/ form.invoiceValue).toFixed(2)}} %</span>
         </div>
       </div>
       <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -1639,7 +1639,7 @@
                   <span> {{(form.packing * form.exRate).toFixed(2)}}</span>
                 </div>
                 <div class="col-md-2 text-center">
-                  <span> {{(form.packing / form.invoiceValue).toFixed(2)}} %</span>
+                  <span> {{(form.packing *100/ form.invoiceValue).toFixed(2)}} %</span>
                 </div>
               </div>
               <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -1653,7 +1653,7 @@
                   <span> {{(form.insurance * form.exRate).toFixed(2)}}</span>
                 </div>
                 <div class="col-md-2 text-center">
-                  <span> {{(form.insurance/ form.invoiceValue).toFixed(2)}}% </span>
+                  <span> {{(form.insurance*100/ form.invoiceValue).toFixed(2)}}% </span>
                 </div>
               </div>
               <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -1667,7 +1667,7 @@
                   <span> {{(form.freight * form.exRate).toFixed(2)}}</span>
                 </div>
                 <div class="col-md-2 text-center">
-                  <span> {{(form.freight/ form.invoiceValue).toFixed(2)}} %</span>
+                  <span> {{(form.freight*100/ form.invoiceValue).toFixed(2)}} %</span>
                 </div>
               </div>
               <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
