--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -57,12 +57,15 @@
       <!-- <iframe ng-src="{{data.currentUrl | trusted}}" scrolling="no" style="height:100%; transition:0.5s;width:100%; border:1px solid #e0e0e0;" allowFullScreen></iframe> -->
 
     </div>
-    <div ng-if="data.audio&&!data.closeIframe" class="container-fluid" style="height:5vh; padding:0px;" ng-init="setHeight()">
+    <div ng-if="data.audio&&!data.closeIframe" class="container-fluid" style="height:3.5vh; padding:0px;" ng-init="setHeight()">
       {{setHeight()}}
       <iframe id="iframeChat{{data.uid}}" ng-src="{{data.audioUrl | trusted}}" scrolling="no" style="height:100%; width:100%; border:1px solid #e0e0e0;"></iframe>
     </div>
 
     <div class="container-fluid" id="scrollArea{{data.uid}}" style="margin-left:10px;padding-top: 5px; height:{{msgDivHeight}}vh; overflow-y:auto; overflow-x:hidden;">
+      <div class="row" ng-if="data.currentUrl" style="background:#f6f6f6;padding:5px;">
+        <span>Active : {{data.currentUrl}}</span>
+      </div>
       <div class="row" style="padding:0px;" ng-repeat="message in data.messages track by $index">
 
         <div ng-if="!message.logs" class="row container-fluid" style="{{message.sentByAgent ? 'padding-right:30px' : 'padding-left:30px'}};">
