--- a/homepage/static/ngTemplates/app.homepage.about.html
+++ b/homepage/static/ngTemplates/app.homepage.about.html
@@ -1,5 +1,4 @@
-<br>
-<div class="container-fluid no_padding" style="min-height:60vh;margin:20px auto;background-image:linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)),url('static/images/24tut/diss.jpg');background-size:100%;">
+<div class="container-fluid no_padding" style="min-height:60vh;margin:20px auto;background-image:linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)),url('static/images/24tut/diss.jpg');background-size:100%;background-repeat:no-repeat;">
   <div class="col-md-12" style="padding-top:20%;padding-left:8%;">
     <span style="color:#fff;font-size:4em;font-weight:bolder;">About</span><br>
     <span class="u_line"></span>
@@ -161,7 +160,7 @@
     </div>
     <div class="col-md-4">
       <div class="container-fluid tell_card">
-        <img src="/static/images/24tut/tell4.jpg" class="tell_abt">
+        <img src="/static/images/24tut/tell5.png" class="tell_abt">
         <img src="/static/images/24tut/clip.png" class="tell_abt_overlay">
         <div class="text-center tell_c_info">
           <h2 class="pro_head">Joseph Irvin</h2>
